--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,36 @@
 /* styles.css */
 body {
     font-family: 'Roboto', sans-serif;
-    color: #333;
-    /* домінантний колір тексту з макета */
+    color: #434455;
+    background-color: #FFFFFF;
     margin: 0;
     padding: 0;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 20px;
     background-color: #fff;
-    width: 1440px;
-    height: 72px;
-    gap: 0px;
-    opacity: 0px;
-    /* колір фону з макета */
 }
 
 .nav {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .nav__logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
     text-decoration: none;
-    color: #000;
+}
+
+.nav__logo span {
+    color: #2e2f42;
 }
 
 .nav__list {
@@ -46,6 +47,13 @@ body {
 .nav__link {
     text-decoration: none;
     color: #000;
+}
+
+.nav__link:hover,
+.nav__link:focus,
+.contact__link:hover,
+.contact__link:focus {
+    color: #007BFF;
 }
 
 .contact {
@@ -65,155 +73,66 @@ body {
 
 .contact__link {
     text-decoration: none;
-    color: #000;
+    color: #434455;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.contact__link:hover,
+.contact__link:focus {
+    color: #404bbf;
 }
 
 .hero {
     text-align: center;
     padding: 50px 0;
     background: #2E2F42;
-    width: 1440px;
-    height: 600px;
-    top: 72px;
-    gap: 0px;
-    opacity: 0px;
 }
 
 .hero__title {
     font-family: 'Raleway', sans-serif;
-    padding-left: 472px;
-    padding-right: 472px;
-    padding-top: 188px;
-    padding-bottom: 48px;
-    color: #FFFFFF;
     font-weight: 700;
-    font-size: 2em;
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
     margin-bottom: 20px;
-    
 }
 
-.button {
-    padding: 10px 20px;
-    font-size: 1em;
-    cursor: pointer;
-}
 .hero__button {
     padding: 10px 20px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
     font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
     background: #4D5AE5;
     color: #fff;
     border: none;
     border-radius: 5px;
-    margin-top: 20px;
+    cursor: pointer;
 }
 
 .hero__button:hover,
 .hero__button:focus {
-    background: #0056b3;
-}
-
-team {
-    padding: 50px 20px;
-    padding-left: 156px;
-    padding-right: 156px;
-    padding-top: 120px;
-    padding-bottom: 120px;
-    width: 1128px;
-    height: 104px;
-    top: 792px;
-    left: 156px;
-    gap: 0px;
-    opacity: 0px;
-}
-
-.team {
-    width: 1440px;
-    height: 732px;
-    top: 1016px;
-    gap: 0px;
-    opacity: 0px;
-    background: #F4F4FD;
-}
-
-.team__title {
-    padding-top: 120px;
-    margin-bottom: 72px;
-    margin-left: 639px;
-    margin-right: 639px;
-    width: 162px;
-    height: 40px;
-    top: 1136px;
-    left: 639px;
-    gap: 0px;
-    opacity: 0px;
-}
-
-.team__item {
-    width: Hug (264px)px;
-    height: Hug (380px)px;
-    top: 1248px;
-    left: 1020px;
-    padding: 0px 0px 32px 0px;
-    gap: 32px;
-    border-radius: 0px 0px 4px 4px;
-    opacity: 0px;
-    background: #FFFFFF;
-    box-shadow: 0px 2px 1px 0px #2E2F4214;
-    box-shadow: 0px 1px 1px 0px #2E2F4229;
-    box-shadow: 0px 1px 6px 0px #2E2F4214; 
+    background: #404BBF;
 }
 
 .benefits {
-    width: 1128px;
-    height: 104px;
-    margin-right: 156px;
-    margin-top: 120px;
-    margin-left: 156px;
-    margin-bottom: 120px;
-    gap: 0px;
-    opacity: 0px;
+    background-color: #F4F4FD;
+    padding: 50px 20px;
 }
 
-.benefits__list,
-.team__list {
+.benefits__list {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    margin: 0;
+    padding: 0;
 }
 
-.benefits__item{
-    flex: 1 1 calc(25% - 20px);
-    box-sizing: border-box;
-}
-
-.benefits__subtitle,
-.team__name {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-}
-
-.footer {
-    text-align: center;
-    margin-top: 2988px;
-    background-color: #333;
-    color: #fff;
-}
-
-.footer__logo {
-    text-decoration: none;
-    color: #fff;
-}
-
-.footer__text {
-    margin-top: 10px;
-}
-
-/* Стан ховеру та фокусу */
-.nav__link:hover,
-.nav__link:focus,
-.contact__link:hover,
-.contact__link:focus {
-    color: #007BFF;
-    /* змінити на потрібний колір */
-}
+.benefits__item {
+    flex: 1 1 calc(25% - 20px
