--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,15 @@ body {
 
 .nav__item {
     margin-left: 20px;
+    font-weight: 500;
 }
 
 .nav__link {
     text-decoration: none;
-    color: #000;
+    font-weight: 500
+    color: #2e2f42;
+    letter-spacing: 0.02em;
+    line-height: 1.5;
 }
 
 .nav__link:hover,
@@ -77,6 +81,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    font-style: normal
 }
 
 .contact__link:hover,
