--- a/css/styles.css
+++ b/css/styles.css
@@ -43,12 +43,13 @@ body {
 .nav__item {
     margin-left: 20px;
     font-weight: 500
+    color: #2e2f42;
 }
 
 .nav__link {
     text-decoration: none;
     font-weight: 500
-    color: #2e2f42
+    
     letter-spacing: 0.02em
     line-height: 1.5
 }
