--- a/css/styles.css
+++ b/css/styles.css
@@ -117,13 +117,39 @@ body {
     background-color: #F4F4FD;
 }
 
-.benefits__list {
-    list-style: none;
-    flex-wrap: wrap;
-    margin: 0;
+.benefits__subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.benefits__text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.team {
+    background-color: #F4F4FD;
+}
+
+.team__title {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
 }
 
 .team__list {
+    background-color: #FFFFFF
+}
+
+.team__name {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -132,12 +158,13 @@ body {
 }
 
 .team__role {
+    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    color: #434455;
 }
 
 .portfolio {
-    background-color: #F4F4FD;
 }
 .portfolio__title {
     font-size: 36px;
@@ -148,7 +175,7 @@ body {
     color: #2e2f42;
 }
 .portfolio__item {
-    background-color: #FFFFFF
+    background-color: #FFFFFF;
 }
 .portfolio__name {
     font-weight: 500;
@@ -158,7 +185,7 @@ body {
     color: #2e2f42;
 }
 .portfolio__role {
-    font-size: 16px
+    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
