--- a/css/styles.css
+++ b/css/styles.css
@@ -58,11 +58,10 @@ body {
 
 .contact__list {
     list-style: none;
-    margin: 0;
 }
 
 .contact__item {
-    margin-left: 20px;
+    font-style: normal;
 }
 
 .contact__link {
@@ -146,7 +145,7 @@ body {
 }
 
 .team__list {
-    background-color: #FFFFFF
+    background-color: #FFFFFF;
 }
 
 .team__name {
@@ -191,9 +190,28 @@ body {
     color: #434455;
 }
 
-.benefits__item {
-    flex: 1 1 calc(25% - 20px
+.footer {
+    background-color: #2e2f42;
 }
 
+.footer__logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
+.footer__logo span {
+    color: #f4f4fd;
+}
+
+.footer__text {
+    line-height: 1.5;
+    color: #F4F4FD;
+    letter-spacing: 0.02em;
+}
 
 
