--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@ body {
     font-family: 'Roboto', sans-serif;
     color: #434455;
     background-color: #FFFFFF;
-    margin: 0;
 }
 
 .header {
@@ -31,11 +30,9 @@ body {
 
 .nav__list {
     list-style: none;
-    margin: 0;
 }
 
 .nav__item {
-    margin-left: 20px;
 }
 
 .nav__link {
@@ -54,6 +51,7 @@ body {
 }
 
 .contact {
+    font-style: normal;
 }
 
 .contact__list {
@@ -113,7 +111,7 @@ body {
 }
 
 .benefits {
-    background-color: #F4F4FD;
+background-color: #FFFFFF;
 }
 
 .benefits__subtitle {
