--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,8 @@ a {
 .header {
 padding-top: 24px;
 padding-bottom: 24px;
+
+border-bottom: 1px solid #e7e9fc;
 }
 
 .nav {
@@ -69,6 +71,7 @@ padding-bottom: 24px;
     flex-direction: row;
     gap: 0px;
     padding-left: 156px;
+    margin-right: 76px;
 }
 
 .nav__logo span {
@@ -108,6 +111,8 @@ padding-bottom: 24px;
 
 .contact__list {
     display: flex;
+    gap: 40px;
+    margin-left: 332px;
 }
 
 .contact__mail {
@@ -116,7 +121,6 @@ padding-bottom: 24px;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-left: 332px;
 }
 
 .contact__tel {
@@ -128,8 +132,18 @@ padding-bottom: 24px;
 }
 
 .hero__container {
-    width: 1440px;
-    height: 600px;
+
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
 }
 
 .hero {
@@ -137,6 +151,7 @@ padding-bottom: 24px;
     background: #2E2F42;
     width: 1440px;
     height: 600px;
+    padding: 188px 0
 }
 
 .hero__title {
@@ -149,15 +164,15 @@ padding-bottom: 24px;
     color: #FFFFFF;
     gap: 0px;
     opacity: 0px;
-    padding-right: 472px;
-    padding-bottom: 48px;
-    padding-left: 472px;
     font-family: Roboto;
     font-size: 56px;
     font-weight: 700;
     line-height: 60px;
     letter-spacing: 0.02em;
     text-align: center;
+    max-width: 496px;
+    margin-left: 472px;
+    margin-bottom: 48px;
 }
 
 .hero__button {
@@ -170,6 +185,11 @@ padding-bottom: 24px;
     color: #fff;
     border: none;
     cursor: pointer;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    margin-left: 636px;
 }
 
 .hero__button:hover,
@@ -187,6 +207,7 @@ padding-bottom: 24px;
     margin-right: 156px;
     margin-bottom: 120px;
     margin-left: 156px;
+    gap: 24px;
 }
 
 .benefits__item{
@@ -205,6 +226,8 @@ padding-bottom: 24px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
+    width: calc((100% - 72px) / 4);
 }
 
 .benefits__text {
@@ -218,9 +241,12 @@ padding-bottom: 24px;
     background-color: #F4F4FD;
     width: 1440px;
     height: 732px;
+    padding: 120px 0;
 }
 
 .team__item {
+    flex-basis: calc((100% - 3 * 24px) / 4);
+    box-sizing: border-box;
     background-color: #FFFFFF;
     border-radius: 0 0 4px 4px;
     padding: 0px 0px 32px 0px;
@@ -242,6 +268,7 @@ padding-bottom: 24px;
     gap: 8px;
     width: 232px;
     height: 56px;
+    padding: 32px 0;
 }
 
 .team__title {
@@ -251,6 +278,7 @@ padding-bottom: 24px;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    margin-bottom: 72px;
 }
 
 .team__list {
@@ -261,9 +289,8 @@ padding-bottom: 24px;
     width: 264px;
     height: 380px;
     gap: 24px;
-    margin-top: 72px;
     margin-left: 156px;
-
+    padding-bottom: 120px;
 }
 
 .team__name {
@@ -272,6 +299,8 @@ padding-bottom: 24px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-align: center;
+    margin-bottom: 8px
 }
 
 .team__role {
@@ -279,11 +308,13 @@ padding-bottom: 24px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    text-align: center;
 }
 
 .portfolio {
-    width: 1128px;
-    height: 1000px;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    padding-left: 156px;
 }
 
 .portfolio__title {
@@ -293,7 +324,7 @@ padding-bottom: 24px;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
-    margin-top: 120px;
+    margin-bottom: 72px;
 }
 .portfolio__item {
     background-color: #FFFFFF;
@@ -307,20 +338,23 @@ padding-bottom: 24px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
 .portfolio__text {
     border-bottom: 1px solid #e7e9fc;
-        border-left: 1px solid #e7e9fc;
-        border-right: 1px solid #e7e9fc;
-        padding: 32px 16px;
-        width: 360px;
-        height: 120px;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+    width: 360px;
+    height: 120px;
 }
 
 .portfolio__list {
     display: flex;
     flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
 }
 
 .portfolio__role {
@@ -334,7 +368,7 @@ padding-bottom: 24px;
     background-color: #2e2f42;
     width: 1440px;
     height: 312px;
-    padding-top: 100px;
+    padding: 100px 0;
     padding-left: 156px;
 }
 
@@ -350,18 +384,17 @@ padding-bottom: 24px;
 
 .footer__logo span {
     color: #f4f4fd;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer__text {
     line-height: 1.5;
     color: #F4F4FD;
     letter-spacing: 0.02em;
-    width: 264px;
-    height: 112px;
-    
+    max-width: 264px  
 }
 
 .container {
     width: 1158px;
 }
-1
