--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,10 @@ ul {
 a {
     text-decoration: none;
 }
+
+img {
+    display: block;
+}
 .section {
     padding-bottom: 120px;
     padding-top: 120px;
@@ -126,17 +130,21 @@ border-bottom: 1px solid #e7e9fc;
     position: absolute;
     width: 1px;
     height: 1px;
-    padding: 0;
     margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
     border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+    calc
 }
 
 .hero {
     text-align: center;
     background: #2E2F42;
-    padding: 188px 0;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .hero__title {
@@ -230,7 +238,6 @@ border-bottom: 1px solid #e7e9fc;
 }
 
 .team__item {
-    flex-basis: calc((100% - 3 * 24px) / 4);
     box-sizing: border-box;
     background-color: #FFFFFF;
     border-radius: 0 0 4px 4px;
@@ -285,7 +292,8 @@ border-bottom: 1px solid #e7e9fc;
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-align: center;
-    margin-bottom: 8px
+    margin-bottom: 8px;
+    width: calc((100% - 72px) / 4);
 }
 
 .team__role {
@@ -299,7 +307,6 @@ border-bottom: 1px solid #e7e9fc;
 .portfolio {
     padding-top: 120px;
     padding-bottom: 120px;
-    padding-left: 156px;
 }
 
 .portfolio__title {
