--- a/css/styles.css
+++ b/css/styles.css
@@ -361,8 +361,8 @@ border-bottom: 1px solid #e7e9fc;
     background-color: #2e2f42;
     width: 1440px;
     height: 312px;
-    padding: 100px 0;
-    padding-left: 156px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .footer__logo {
@@ -373,6 +373,8 @@ border-bottom: 1px solid #e7e9fc;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer__logo span {
