--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding: 24px 0;
 }
 
 .nav__items:not(:last-child) {
@@ -237,7 +238,7 @@ img {
 .team__item {
     box-sizing: border-box;
     background-color: #FFFFFF;
-    border-radius: 0 0 4px 4px;
+    border-radius: 0px 0px 4px 4px;
     padding: 0px 0px 32px 0px;
     width: 264px;
     height: 380px;
@@ -247,6 +248,10 @@ img {
     flex-direction: column;
     gap: 32px;
     margin-top: 232px;
+}
+
+.team__item:not(:nth-child(4n)) {
+    margin-right: 24px;
 }
 
 .text__container {
@@ -277,7 +282,6 @@ img {
     padding: 0px 0px 120px 0px;
     width: 264px;
     height: 380px;
-    gap: 24px;
     width: calc((100% - 72px) / 4);
 }
 
@@ -392,3 +396,4 @@ img {
     padding-left: 15px;
     padding-right: 15px;
 }
+
