--- a/css/styles.css
+++ b/css/styles.css
@@ -152,8 +152,6 @@ img {
     text-align: center;
     letter-spacing: 0.02em;
     color: #FFFFFF;
-    gap: 0px;
-    opacity: 0px;
     font-family: Roboto;
     font-size: 56px;
     font-weight: 700;
@@ -162,7 +160,7 @@ img {
     text-align: center;
     max-width: 496px;
     margin-left: 472px;
-    margin-bottom: 48px;
+    margin: 0 auto 48px;
 }
 
 .hero__button {
@@ -178,8 +176,7 @@ img {
     display: block;
     min-width: 169px;
     height: 56px;
-    border-radius: 4px;
-    margin-left: 636px;
+    margin: 0 auto;
 }
 
 .hero__button:hover,
